# RTSlangsExplainer

./: .gitignore  ARCHITECTURE.md  README.md  技术设计与产品描述文档（for Vibe Coding）.md  跨文化 Slang & Culture Explainer — 新版 PRD.md
data/: profiles.db
data/vector/: chroma.sqlite3
extension/: manifest.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsup.config.ts
extension/data/vector/: chroma.sqlite3
extension/public/options/: index.html
extension/scripts/: copy-static.mjs  fetch-bilibili-subtitle.mjs
extension/src/background/: cache.ts  cachePolicy.ts  index.ts  keyStore.ts  profileStore.ts  router.ts  telemetry.ts
extension/src/content/: index.tsx  ocrFallback.ts  subtitleDetector.ts
extension/src/options/: App.tsx  CachingPanel.tsx  KeyManager.tsx  ProfileForm.tsx  main.tsx  styles.css
server/: pyproject.toml  requirements.txt
server/app/: __init__.py  main.py
server/app/core/: cache.py  config.py
server/app/routes/: api_v1.py  collections.py  explain.py  models.py  profiles.py
server/app/schemas/: collection.py  explain.py  history.py  model.py  profile.py  settings.py
server/app/services/: cache.py  history.py  merge.py  model_repository.py  models.py  online.py  openai_client.py  profile_repository.py  profiles.py  rag.py  settings.py
server/app/workers/: precompute.py
server/lingualens_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/scripts/: build_index.py
server/tests/: test_api_endpoints.py  test_cache_policy.py  test_merge_evidence.py  test_model_store.py  test_profile_switching.py
(+24 files in other folders)
