[project]
name = "lingualens-server"
version = "0.1.0"
description = "Backend service for LinguaLens Deep Explain and cultural profiles."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.1",
  "httpx>=0.27.0",
  "redis>=5.0.4",
  "pydantic>=2.7.1",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "tiktoken>=0.7.0",
  "chromadb>=0.5.0",
  "faiss-cpu>=1.8.0",
  "sentence-transformers>=3.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.1",
  "pytest-asyncio>=0.23.6",
  "pytest-mock>=3.14.0"
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"
